--- a/index.html
+++ b/index.html
@@ -108,6 +108,46 @@
                         </a>
                     </article>
                 </section>
+
+                <section class="watch">
+                    <h2 class="section-header">Watch Today</h2>
+                    <div class="watch-card">
+                        <div class="watch-img">
+                            <img src="./images/img_8.jpg" alt="">
+                            <div class="watch-content">
+                                <h2>Baby Driver</h2>
+                                <div class="movie-info">
+                                    <span>2017</span>
+                                    <span>121 min</span>
+                                    <span>action</span>
+                                    <span>7.78</span>
+                                    <span>8:30 pm</span>
+                                    <p class="movie-story">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod maiores consequuntur architecto illo placeat officiis explicabo, ipsa deleniti minus vel.</p>
+                                    <a href="#">read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="watch-card">
+                        <div class="watch-img">
+                            <img src="./images/img_9.jpg" alt="">
+                            <div class="watch-content">
+                                <h2>Baby Driver</h2>
+                                <div class="movie-info">
+                                    <span>2017</span>
+                                    <span>121 min</span>
+                                    <span>action</span>
+                                    <span>7.78</span>
+                                    <span>8:30 pm</span>
+                                    <p class="movie-story">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod maiores consequuntur architecto illo placeat officiis explicabo, ipsa deleniti minus vel.</p>
+                                    <a href="#">read more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
             </main>
 
             <div class="sidebar-right">
