--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Asap:400,500,700|Inconsolata:400,700" rel="stylesheet">
 
+
+    <link rel="stylesheet" href="./css/lightbox.css">
     <link rel="stylesheet" type="text/css" href="css/lightbox.css">
     
     <!-- FONT AWESOME ICONS -->
@@ -190,52 +192,52 @@
                     <div class="gallery-imgs">
 
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_1.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_1.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_2.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_2.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_3.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_3.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_4.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_4.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_5.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_5.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_6.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_6.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_7.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_7.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_28.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_8.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_9.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_9.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="./images/gallery_10.jpg" data-lightbox="gallery">
                                 <img src="./images/gallery_10.jpg" alt="">
                             </a>
                         </div>
@@ -262,6 +264,8 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <!-- Our Script File -->
     <script type="text/javascript" src="js/main.js"></script>  
+    <!-- LightBox script file-->
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
 
 </body>
 
