--- a/index.html
+++ b/index.html
@@ -241,15 +241,100 @@
                                 <img src="./images/gallery_10.jpg" alt="">
                             </a>
                         </div>
-
                     </div>
                 </section>
 
             </main>
 
             <div class="sidebar-right">
-                <h1>sidebar goes here</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat similique, recusandae doloremque voluptatum assumenda reprehenderit, repudiandae quae illum ducimus quia debitis soluta quas necessitatibus aut, laborum dolores vitae corrupti cupiditate. Deserunt ratione enim odio facilis, magnam, iste molestiae accusamus perspiciatis, ut doloremque ullam corporis sequi vitae modi debitis recusandae illum.</p>
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Rated Movies</h3>
+                        <div class="sidebar-menu">
+                            <nav>
+                                <ul>
+                                    <li><a href="#">The Godfather</a></li>
+                                    <li><a href="#">12 Angry Men</a></li>
+                                    <li><a href="#">The Dark Knight</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Great Actors</h3>
+                        <div class="sidebar-menu">
+                            <nav>
+                                <ul>
+                                    <li><a href="#">Alpacino</a></li>
+                                    <li><a href="#">Robert De niro</a></li>
+                                    <li><a href="#">Jack Nicholson</a></li>
+                                    <li><a href="#">Leonardo Dicaprio</a></li>
+                                    <li><a href="#">Brad Pitt</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Upcoming Movies</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li><a href="#">Deadpool 2</a></li>
+                                <li><a href="#">Venom</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Best Directors</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li><a href="#">stanley kubrick</a></li>
+                                <li><a href="#">Alfred Hitchcock</a></li>
+                                <li><a href="#">Steven Spielberg</a></li>
+                                <li><a href="#">Martin Scorsese</a></li>
+                                <li><a href="#">Quentin Tarantino</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Categories</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Drama</a></li>
+                                <li><a href="#">Horror</a></li>
+                                <li><a href="#">Romance</a></li>
+                                <li><a href="#">Adventure</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Ten This Week</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li><a href="#">1 - City of Ghosts</a></li>
+                                <li><a href="#">2 - Alien: Covenant</a></li>
+                                <li><a href="#"> 3 - Super Dark Times</a></li>
+                                <li><a href="#">4 - The Square</a></li>
+                                <li><a href="#">5 - Atomic Blonde</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
             </div>
         </div>
         
